--- a/src/server/www/public/login.html
+++ b/src/server/www/public/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Text Input Control</title>
+		<title>Login</title>
 	</head>
 <body>
 	<form action="/rpc/login" method="post">
@@ -11,5 +11,6 @@
 	<br>
 	<button type="submit">login</button>
 	</form>
+	<a href="register.html">Register</a> 
 </body>
 </html>
