--- a/src/server/www/index.html
+++ b/src/server/www/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Text Input Control</title>
+		<title>Test Title</title>
 	</head>
 <body>
 	<button onClick="logout()">logout</button>
 	<script>
 		function logout(){
 			var xhr = new XMLHttpRequest();
-			xhr.open('GET', "/rpc/logout", true);
+			xhr.open('POST', "/rpc/logout", true);
 			xhr.send();
 			
 			setTimeout(function(){window.location.reload()},100);
